# ps64_asm

./: .clang-tidy  .gitignore  README.md  meson.build
.github/workflows/: meson-build.yml
include/: constants.hpp
include/core_executor/: asm_functions.h  core_executor.h
include/machine/: machine.hpp
include/machine_core/: machine_core.h
include/machine_memory/: machine_memory.hpp  machine_memory_slice.hpp
include/utils/args/: arg_slice.h
src/: main.c  main.cpp
src/core_executor/: asm_functions.cpp  core_executor.cpp
src/machine/: machine.cpp
src/machine_core/: machine_core.cpp
src/machine_memory/: machine_memory.cpp  machine_memory_slice.cpp
src/utils/args/: arg_slice.cpp
tests/: test_setup.cpp
